# innovation-rag-search-retrieval

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
app/: logger.py  main.py
rag_search_retrieval/: __init__.py  data_pipeline.py  experiment_rag_search_retrieval.ipynb  milvus.py  milvus_experiment_rag_search_retrieval.ipynb  qdrant.py  qdrant_experiment_rag_search_retrieval.ipynb  result_collector.py
rag_search_retrieval/data/: milvus_results.csv
